--- a/Kwetter/src/main/webapp/WEB-INF/web.xml
+++ b/Kwetter/src/main/webapp/WEB-INF/web.xml
@@ -21,4 +21,33 @@
     <welcome-file-list>
         <welcome-file>login.xhtml</welcome-file>
     </welcome-file-list>
+    
+    <!-- SECURITY -->
+    <login-config>
+	<auth-method>FORM</auth-method>
+        <realm-name>kwetter-realm</realm-name>
+	<form-login-config>
+		<form-login-page>/login.xhtml</form-login-page>
+		<form-error-page>/login.xhtml</form-error-page>
+	</form-login-config>
+    </login-config>
+	
+    <security-role>
+        <description/>
+        <role-name>admin</role-name>
+    </security-role>
+	
+    <security-constraint>
+        <display-name>Restricted to users</display-name>
+        <web-resource-collection>
+            <web-resource-name>Restricted Access</web-resource-name>
+            <url-pattern>/admin/*</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <role-name>admin</role-name>
+        </auth-constraint>
+        <user-data-constraint>
+		<transport-guarantee>NONE</transport-guarantee>
+	</user-data-constraint>
+    </security-constraint>
 </web-app>
