--- a/Raidbot/raidservice/pom.xml
+++ b/Raidbot/raidservice/pom.xml
@@ -59,11 +59,7 @@
         </dependency>
         <dependency>
             <groupId>org.wildfly.swarm</groupId>
-            <artifactId>jpa</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.wildfly.swarm</groupId>
-            <artifactId>datasources</artifactId>
+            <artifactId>cdi</artifactId>
         </dependency>
     </dependencies>
 </project>
