--- a/Raidbot/raidservice/pom.xml
+++ b/Raidbot/raidservice/pom.xml
@@ -44,6 +44,14 @@
                 </executions>
             </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>project-defaults.yml</include>
+                </includes>
+            </resource>
+        </resources>
     </build>
 
     <dependencies>
