--- a/Raidbot/playerservice/pom.xml
+++ b/Raidbot/playerservice/pom.xml
@@ -34,6 +34,11 @@
             <plugin>
                 <groupId>org.wildfly.swarm</groupId>
                 <artifactId>wildfly-swarm-plugin</artifactId>
+                 <configuration>
+                    <properties>
+                        <swarm.http.port>8081</swarm.http.port>
+                    </properties>
+                </configuration>
                 <version>${version.wildfly.swarm}</version>
         
                 <executions>
