--- a/Raidbot/raidservice/pom.xml
+++ b/Raidbot/raidservice/pom.xml
@@ -34,6 +34,11 @@
             <plugin>
                 <groupId>org.wildfly.swarm</groupId>
                 <artifactId>wildfly-swarm-plugin</artifactId>
+                <configuration>
+                    <properties>
+                        <swarm.http.port>8080</swarm.http.port>
+                    </properties>
+                </configuration>
                 <version>${version.wildfly.swarm}</version>
                 <executions>
                     <execution>
@@ -55,6 +60,12 @@
     </build>
 
     <dependencies>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+            <type>jar</type>
+        </dependency>
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
